--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,47 @@
 <!-- Header -->
-<header>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <img class="img-responsive" src="img/profile.png" alt="profile-pic" />
-        <div class="intro-text">
-          <span class="name">{{ site.title }}</span>
-          <hr class="star-light" />
-          <span class="skills">{{ site.skills }}</span>
+<header class="header-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 text-content">
+                <br><br> <!-- Add line breaks here to move the content down -->
+                <br><br> <!-- Add line breaks here to move the content down -->
+                <h1 id="typing-effect" class="typing-animation"></h1>
+                <br><br> <!-- Add line breaks here to move the content down -->
+                <p class="name">{{ site.skills }}</p>
+            </div>
+            <div class="col-md-6 image-content">
+                <img src="img/profile.png" alt="profile-pic" class="img-responsive">
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </header>
+
+
+
+<!-- Add this script before the closing body tag -->
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    const text = "Welcome to Abdubidopsis"; // The text you want to display
+    const typingElement = document.getElementById("typing-effect");
+    let index = 0;
+
+    function typeText() {
+        if (index < text.length) {
+            typingElement.innerHTML += text.charAt(index);
+            index++;
+            setTimeout(typeText, 100); // Adjust speed (in ms) of typing effect
+        } else {
+            setTimeout(function() {
+                typingElement.innerHTML = ''; // Clear the text
+                index = 0; // Reset the index
+                typeText(); // Start typing again
+            }, 2000); // Adjust delay before restarting the typing effect
+        }
+    }
+
+    typeText();
+});
+</script>
+
+</body>
+</html>
