--- a/_includes/activities_grid.html
+++ b/_includes/activities_grid.html
@@ -1,26 +1,28 @@
-<!-- Activities Section -->
+<!-- Activities Grid Section -->
 <section id="activities">
-    <div class="container portfolio-flex-grid">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2> Activities </h2>
-          <hr class="star-primary">
-        </div>
-      </div>
-      <div class="portfolio-flex-row">
-        {% for activity in site.activities %}
-        <div class="col-md-3 portfolio-item">
-          <a href="#activityModal-{{ activity.modal-id }}" class="portfolio-link" data-toggle="modal">
-            <div class="caption">
-              <div class="caption-content">
-                <i class="fa fa-search-plus fa-3x"></i>
-              </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Activities</h2>
+                <hr class="star-primary">
             </div>
-            <i class="{{ activity.icon }}"></i>
-            <img src="img/activities/{{ activity.img }}" class="img-responsive portfolio-thumbnail" alt="{{ activity.alt }}">
-          </a>
         </div>
-        {% endfor %}
-      </div>
+        <div class="row">
+            {% for activity in site.activities %}
+            <div class="col-md-4 col-sm-6 portfolio-item">
+                <a href="#activityModal-{{ activity.modal-id }}" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img src="{{ site.baseurl }}/img/activities/{{ activity.img }}" class="img-responsive portfolio-thumbnail" alt="{{ activity.alt }}">
+                </a>
+                <h3>{{ activity.title }}</h3>
+                <p>{{ activity.description | truncatewords: 20 }}</p>
+            </div>
+            {% endfor %}
+        </div>
     </div>
-  </section>
+</section>
+
