--- a/_includes/activities_grid.html
+++ b/_includes/activities_grid.html
@@ -10,7 +10,7 @@
         <div class="row">
             {% for activity in site.activities %}
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="#activityModal-{{ activity.modal-id }}" class="portfolio-link" data-toggle="modal">
+                <a href="#activityModal-{{ activity.modal-id }}" class="portfolio-link" data-toggle="modal" title="{{ activity.click }}">
                     <div class="caption">
                         <div class="caption-content">
                             <i class="fa fa-search-plus fa-3x"></i>
@@ -19,10 +19,10 @@
                     <img src="{{ site.baseurl }}/img/activities/{{ activity.img }}" class="img-responsive portfolio-thumbnail" alt="{{ activity.alt }}">
                 </a>
                 <h3>{{ activity.title }}</h3>
-                <p>{{ activity.description | truncatewords: 20 }}</p>
+                <p>{{ activity.subtitle }}</p>
+                <i class="{{ activity.icon }}"></i>
             </div>
             {% endfor %}
         </div>
     </div>
 </section>
-
