--- a/_includes/activities_grid.html
+++ b/_includes/activities_grid.html
@@ -18,6 +18,8 @@
                     </div>
                     <img src="{{ site.baseurl }}/img/activities/{{ activity.img }}" class="img-responsive portfolio-thumbnail" alt="{{ activity.alt }}">
                 </a>
+                <!-- Icon before title -->
+                <i class="fa-solid fa-people-roof"></i>
                 <h3>{{ activity.title }}</h3>
                 <p>{{ activity.subtitle }}</p>
                 <i class="{{ activity.icon }}"></i>
