--- a/_includes/activities_grid.html
+++ b/_includes/activities_grid.html
@@ -16,8 +16,10 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
+                    <i class="{{ activity.icon }}"></i>
                     <img src="{{ site.baseurl }}/img/activities/{{ activity.img }}" class="img-responsive portfolio-thumbnail" alt="{{ activity.alt }}">
                 </a>
+            </div>
                 <!-- Icon before title -->
                 <i class="fa-solid fa-people-roof"></i>
                 <h3>{{ activity.title }}</h3>
