--- a/_includes/activities_grid.html
+++ b/_includes/activities_grid.html
@@ -1,15 +1,15 @@
 <!-- Activities Grid Section -->
 <section id="activities">
-    <div class="container">
+    <div class="container portfolio-flex-grid">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2>Activities</h2>
                 <hr class="star-primary">
             </div>
         </div>
-        <div class="row">
+        <div class="portfolio-flex-row">
             {% for activity in site.activities %}
-            <div class="col-md-4 col-sm-6 portfolio-item">
+            <div class="col-sm-6 portfolio-item">
                 <a href="#activityModal-{{ activity.modal-id }}" class="portfolio-link" data-toggle="modal" title="{{ activity.click }}">
                     <div class="caption">
                         <div class="caption-content">
