--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -14,11 +14,11 @@
         <div class="col-lg-8 col-lg-offset-2">
           <div class="modal-body">
             <h2>{{ post.title }}</h2>
-            <h4 class="subtitle">{{ post.subtitle }}</h4>
+            <!-- <h4 class="subtitle">{{ post.subtitle }}</h4> -->
             <hr class="star-primary">
             <!-- Make the post image clickable -->
-            <a href="img/portfolio/{{ post.post-img }}" class="btn btn-lg btn-outline" target="_blank">
-              <img src="img/portfolio/{{ post.post-img }}" class="img-responsive img-centered portfolio-img" alt="{{ post.alt }}">
+           <!-- <a href="img/portfolio/{{ post.post-img }}" class="btn btn-lg btn-outline" target="_blank"> -->
+            <img src="img/portfolio/{{ post.post-img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
             </a>
             {% if post.description %}
             <p>{{ post.description }}</p>
@@ -34,9 +34,14 @@
                 <strong>{{ post.project-date }}</strong>
               </li>
               {% endif %}
-              {% if post.skills %}
+              <!-- {% if post.skills %}
               <li>Main Skills:
                 <strong>{{ post.skills }}</strong>
+              </li>
+              {% endif %} -->
+              {% if post.client %}
+              <li>Client:
+                <strong>{{ post.client }}</strong>
               </li>
               {% endif %}
               {% if post.click %}
